# tiralabra

./: README.md  Viikkoraportti2.md  lzw.py  määrittelydokumentti.md  pyproject.toml
.github/workflows/: main.yml
algorithms/: lzw.py
documentation/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md  määrittelydokumentti.md  testausdokumentti.md  toteutusraportti.md
src/: huffman.py  index.py  lzw.py
src/tests/: huffman_test.py  lorem_longer.txt  loremlorem.txt  lzw_test.py
src/tests/files/: holmes0.txt  holmes1.txt  holmes2.txt  holmes3.txt  holmes4.txt  lipsum16KB.txt  lipsum1KB.txt  lipsum1MB.txt  lipsum2MB.txt  lipsum4KB.txt  lipsum500B.txt  loremipsum.txt  loremlorem.txt
