[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Miina Saroma <miina.saroma@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
